k8s/games-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-bff
spec:
  selector:
    matchLabels:
      app: games-bff
  template:
    metadata:
      labels:
        app: games-bff
    spec:
      containers:
        - name: server
          image: games-bff
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8000
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: games-bff
spec:
  selector:
    app: games-bff
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
