k8s/lobbies-spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobbies-spa
spec:
  selector:
    matchLabels:
      app: lobbies-spa
  template:
    metadata:
      labels:
        app: lobbies-spa
    spec:
      containers:
        - name: server
          image: lobbies-spa
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lobbies-spa
spec:
  selector:
    app: lobbies-spa
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
