k8s/players-spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: players-spa
spec:
  selector:
    matchLabels:
      app: players-spa
  template:
    metadata:
      labels:
        app: players-spa
    spec:
      containers:
        - name: server
          image: players-spa
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: players-spa
spec:
  selector:
    app: players-spa
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: players-spa-route
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /players
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: players-spa
          port: 80
